# speechevaluator

./: .env.example  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_evaluation_schema.py
app/: main.py
app/auth/: __init__.py  auth.py
config/: database.py  settings.py
models/: __init__.py  base.py  employee.py  evaluation.py
repositories/: __init__.py  evaluation_repository.py
routers/v1/: __init__.py  evaluation.py
schemas/: __init__.py  evaluation.py
services/: __init__.py  elevenlabs_service.py  report_service.py
